dnl> this is a test comment
AC_INIT(src/uncrustify.c)
AM_INIT_AUTOMAKE(uncrustify, 0.0.8)
AC_CANONICAL_HOST
AC_PROG_RANLIB
AC_PROG_CC
 if test -n "$GCC"; then
      CFLAGS="$CFLAGS -Wall "
 fi

GGDBFLAGS=""

AC_ARG_ENABLE(experimental,  [  --enable-experimental     enable the use of experimental features/code. ],
     [ AC_DEFINE(EXPERIMENTAL)  ],)

dnl Checks for header files.
AC_HEADER_STDC

CFLAGS="$GGDBFLAGS $CFLAGS"

dnl Touch the makefile.in to avoid running automake the next time we
dnl run.
touch Makefile.in

AC_SUBST(MORELIBS)
AC_SUBST(CORELIBS)
AC_SUBST(MOREDEFS)
AC_SUBST(LDFLAGS)
AC_SUBST(INCS)
AC_SUBST(PREFIX)
AC_OUTPUT(Makefile src/Makefile)

